--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "go"
   ],
   "author": "AtRiskMedia",
-  "license": "MIT",
+  "license": "FSL-1.1-MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/AtRiskMedia/astro-tractstack.git"
@@ -36,6 +36,7 @@
     "astro": "^5.0.0"
   },
   "dependencies": {
+    "@ark-ui/react": "^5.9.0",
     "@astrojs/node": "^9.0.0",
     "kleur": "^4.1.5",
     "prompts": "^2.4.2"
