--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "@ark-ui/react": "^5.9.0",
     "@astrojs/node": "^9.0.0",
+    "@heroicons/react": "^2.1.1",
     "kleur": "^4.1.5",
     "prompts": "^2.4.2"
   },
@@ -49,8 +50,8 @@
     "@astrojs/react": "^3.0.0",
     "@types/node": "^22.0.0",
     "@types/prompts": "^2.4.9",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "18.3.11",
+    "@types/react-dom": "18.3.0",
     "typescript": "^5.6.0",
     "prettier": "3.3.3",
     "prettier-plugin-astro": "0.14.1",
