--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "@ark-ui/react": "^5.9.0",
     "@astrojs/node": "^9.0.0",
     "@heroicons/react": "^2.1.1",
+    "@zag-js/core": "^1.18.1",
+    "@zag-js/select": "^1.18.1",
+    "@zag-js/switch": "^1.18.1",
     "kleur": "^4.1.5",
     "prompts": "^2.4.2"
   },
@@ -52,10 +55,10 @@
     "@types/prompts": "^2.4.9",
     "@types/react": "18.3.11",
     "@types/react-dom": "18.3.0",
-    "typescript": "^5.6.0",
     "prettier": "3.3.3",
     "prettier-plugin-astro": "0.14.1",
-    "prettier-plugin-tailwindcss": "0.6.8"
+    "prettier-plugin-tailwindcss": "0.6.8",
+    "typescript": "^5.6.0"
   },
   "engines": {
     "node": ">=18.14.1"
