--- a/package.json
+++ b/package.json
@@ -43,9 +43,7 @@
     "@ark-ui/react": "^5.9.0",
     "@astrojs/node": "^9.0.0",
     "@heroicons/react": "^2.1.1",
-    "@zag-js/core": "^1.18.1",
-    "@zag-js/select": "^1.18.1",
-    "@zag-js/switch": "^1.18.1",
+    "@shoelace-style/shoelace": "2.17.1",
     "kleur": "^4.1.5",
     "prompts": "^2.4.2"
   },
