--- a/package.json
+++ b/package.json
@@ -43,11 +43,16 @@
     "@ark-ui/react": "^5.9.0",
     "@astrojs/node": "^9.0.0",
     "@heroicons/react": "^2.1.1",
+    "d3": "^7.9.0",
+    "d3-sankey": "^0.12.3",
     "kleur": "^4.1.5",
+    "player.js": "^0.1.0",
     "prompts": "^2.4.2"
   },
   "devDependencies": {
     "@astrojs/react": "^3.0.0",
+    "@types/d3": "^7.4.3",
+    "@types/d3-sankey": "^0.12.3",
     "@types/node": "^22.0.0",
     "@types/prompts": "^2.4.9",
     "@types/react": "18.3.11",
