--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@ark-ui/react": "^5.9.0",
     "@astrojs/node": "^9.0.0",
     "@heroicons/react": "^2.1.1",
+    "@internationalized/date": "^3.8.2",
     "@nanostores/react": "^1.0.0",
     "d3": "^7.9.0",
     "d3-sankey": "^0.12.3",
