--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@nanostores/react": "^1.0.0",
     "d3": "^7.9.0",
     "d3-sankey": "^0.12.3",
+    "html-to-image": "^1.11.13",
     "kleur": "^4.1.5",
     "nanostores": "^1.0.1",
     "player.js": "^0.1.0",
