--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,18 @@
 {
+  // This is the most important line. It inherits Astro's recommended TypeScript settings.
+  "extends": "astro/tsconfigs/base",
   "compilerOptions": {
-    "target": "ES2022",
-    "module": "ESNext",
-    "moduleResolution": "bundler",
-    "strict": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
+    // Your project-specific build options are kept.
     "declaration": true,
     "outDir": "dist",
     "rootDir": ".",
-    "allowJs": false,
-    "checkJs": false,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
+    // Your React settings are preserved.
     "jsx": "react-jsx",
     "jsxImportSource": "react",
+    // Your custom path aliases are also preserved.
     "baseUrl": ".",
     "paths": {
-      "@/*": ["templates/src/*"], // Now @/ resolves to template files
+      "@/*": ["templates/src/*"],
       "@/components/*": ["templates/src/components/*"],
       "@/utils/*": ["templates/src/utils/*"],
       "@/types/*": ["templates/src/types/*"],
@@ -29,15 +22,9 @@
       "@/constants/*": ["templates/src/constants/*"],
       "@/hooks/*": ["templates/src/hooks/*"],
       "@/client/*": ["templates/src/client/*"]
-    },
-    "types": [
-      "node",
-      "astro",
-      "@astrojs/react",
-      "@types/react",
-      "@types/react-dom"
-    ]
+    }
   },
+  // Your "include" and "exclude" arrays remain, as they are specific to your project's file structure.
   "include": [
     "index.ts",
     "config.ts",
@@ -46,7 +33,8 @@
     "utils/**/*.ts",
     "bin/**/*.js",
     "templates/**/*",
+    "templates/src/**/*",
     "templates/src/types/astro.d.ts"
   ],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "templates", "dist"]
 }
