--- a/tsconfig.dts.json
+++ b/tsconfig.dts.json
@@ -5,7 +5,7 @@
     "emitDeclarationOnly": true,
     "jsx": "preserve",
     "baseUrl": ".",
-    "skipLibCheck": true,
+    //"skipLibCheck": true,
     "paths": {
       "@/*": ["templates/src/*"]
     }
