--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "build": "vite build && tsc -p tsconfig.dts.json",
     "format": "prettier --write .",
     "dev": "vite build --watch",
-    "check": "astro check",
-    "prepublishOnly": "pnpm format && pnpm check && pnpm build"
+    "prepublishOnly": "pnpm format && pnpm tsc && pnpm build"
   },
   "keywords": [
     "astro",
@@ -43,8 +42,8 @@
     "access": "public"
   },
   "peerDependencies": {
-    "astro": "^5.0.0",
-    "@astrojs/react": "^4.0.0"
+    "@astrojs/react": "^4.0.0",
+    "astro": "^5.0.0"
   },
   "dependencies": {
     "@ark-ui/react": "^5.9.0",
@@ -78,7 +77,7 @@
     "prettier": "3.3.3",
     "prettier-plugin-astro": "0.14.1",
     "prettier-plugin-tailwindcss": "0.6.8",
-    "typescript": "^5.6.0",
+    "typescript": "^5.8.3",
     "vite": "^7.1.2",
     "vite-plugin-dts": "^4.5.4"
   },
