--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "./config": "./dist/config.js"
   },
   "files": [
+    "astro.d.ts",
     "dist/",
     "templates/",
     "utils/",
     "bin/",
-    "LICENSE.md",
+    "LICENSE",
     "README.md"
   ],
   "bin": {
@@ -39,33 +40,25 @@
     "url": "https://github.com/AtRiskMedia/astro-tractstack.git"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   },
   "peerDependencies": {
     "@astrojs/react": "^4.0.0",
     "astro": "^5.0.0"
   },
   "dependencies": {
+    "kleur": "^4.1.5",
+    "prompts": "^2.4.2"
+  },
+  "devDependencies": {
     "@ark-ui/react": "^5.21.0",
-    "@astrojs/node": "^9.4.3",
+    "@astrojs/react": "^3.6.3",
     "@heroicons/react": "^2.1.1",
-    "@internationalized/date": "^3.8.2",
+    "@internationalized/date": "3.8.2",
     "@mhsdesign/jit-browser-tailwindcss": "^0.4.2",
     "@nanostores/persistent": "^1.1.0",
     "@nanostores/react": "^1.0.0",
-    "d3": "^7.9.0",
-    "d3-sankey": "^0.12.3",
-    "html-to-image": "^1.11.13",
-    "kleur": "^4.1.5",
-    "nanostores": "^1.0.1",
-    "player.js": "^0.1.0",
-    "prompts": "^2.4.2",
-    "recharts": "^3.1.2",
-    "tinycolor2": "^1.6.0",
-    "ulid": "^3.0.1"
-  },
-  "devDependencies": {
-    "@astrojs/react": "^3.6.3",
     "@types/d3": "^7.4.3",
     "@types/d3-sankey": "^0.12.3",
     "@types/node": "^22.18.0",
@@ -74,10 +67,18 @@
     "@types/react-dom": "18.3.0",
     "@types/tinycolor2": "^1.4.6",
     "astro": "^5.13.3",
+    "d3": "^7.9.0",
+    "d3-sankey": "^0.12.3",
+    "html-to-image": "^1.11.13",
+    "nanostores": "^1.0.1",
+    "player.js": "^0.1.0",
     "prettier": "3.3.3",
     "prettier-plugin-astro": "0.14.1",
     "prettier-plugin-tailwindcss": "0.6.8",
+    "recharts": "^3.1.2",
+    "tinycolor2": "^1.6.0",
     "typescript": "^5.9.2",
+    "ulid": "^3.0.1",
     "vite": "^7.1.3",
     "vite-plugin-dts": "^4.5.4"
   },
