--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "astro-tractstack",
-  "version": "2.0.0-rc.4",
-  "description": "Astro integration for TractStack - build adaptive websites with HTMX and Go",
+  "version": "2.0.0-rc.5",
+  "description": "Astro integration for TractStack - redeeming the web from boring experiences",
   "type": "module",
   "main": "dist/index.js",
   "exports": {
