--- a/templates/env.example
+++ b/templates/env.example
@@ -6,3 +6,6 @@ PUBLIC_GO_BACKEND=http://localhost:8080
 PUBLIC_TENANTID=default
 # OPTIONAL: Multi-Tenant Configuration
 PUBLIC_ENABLE_MULTI_TENANT=false
+# OPTIONAL: Enable Sandbox DEMO mode
+# ***SPECIAL*** has security implications
+#PRIVATE_SANDBOX_SECRET=strong-secret-password
