--- a/package.json
+++ b/package.json
@@ -74,6 +74,8 @@
     "html-to-image": "^1.11.13",
     "nanostores": "^1.1.0",
     "player.js": "^0.1.0",
+    "postcss": "^8.5.6",
+    "postcss-selector-parser": "^7.1.1",
     "prettier": "3.7.4",
     "prettier-plugin-astro": "0.14.1",
     "prettier-plugin-tailwindcss": "0.7.2",
