--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "astro-tractstack",
-  "version": "2.1.4",
-  "description": "Astro integration for TractStack - the digital experience platform (DXP) for the missing middle",
+  "version": "2.2.0",
+  "description": "Astro integration for TractStack - the free web press by At Risk Media",
   "type": "module",
   "main": "dist/index.js",
   "exports": {
