--- a/templates/env.example
+++ b/templates/env.example
@@ -9,3 +9,7 @@ PUBLIC_ENABLE_MULTI_TENANT=false
 # OPTIONAL: Enable Sandbox DEMO mode
 # ***SPECIAL*** has security implications
 #PRIVATE_SANDBOX_SECRET=strong-secret-password
+
+#PRIVATE_SHOPIFY_STOREFRONT_TOKEN=[redacted]
+#PRIVATE_SHOPIFY_DOMAIN=https://[shop].myshopify.com
+#PUBLIC_ENABLE_SHOPIFY=true
