--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "^19.0.0"
   },
   "dependencies": {
+    "@calcom/embed-react": "^1.5.3",
     "kleur": "^4.1.5",
     "prompts": "^2.4.2"
   },
